--- a/package.json
+++ b/package.json
@@ -9,19 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/backend": "^0.38.3",
+    "@clerk/nextjs": "^4.29.9",
+    "@google/generative-ai": "^0.3.0",
+    "@neondatabase/serverless": "^0.9.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^5.28.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "ai": "^3.0.12",
+    "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.2",
+    "lucide-react": "^0.358.0",
+    "next": "14.1.3",
+    "openai-edge": "^1.2.2",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.20.14",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
